imagenes oracle alura

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="imagenes/logokt.png" alt="">
+        <img src="imagenes/Logo.png" alt="">
     </header>
     <main>
         <section>
